WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271387
[WPE] Fix libwpe version check WPEWebView destructor
https://bugs.webkit.org/show_bug.cgi?id=271387
Summary
[WPE] Fix libwpe version check WPEWebView destructor
Nikolas Zimmermann
Reported
2024-03-21 08:58:51 PDT
WPEWebView destructor avoids calling 'wpe_view_backend_set_fullscreen_client' for certain libwpe versions - the fix appeared in 1.14.2, not 1.15.x - correct that"
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2024-03-21 09:00:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26247
EWS
Comment 2
2024-03-27 04:30:33 PDT
Committed
276729@main
(ef3fe7c74055): <
https://commits.webkit.org/276729@main
> Reviewed commits have been landed. Closing PR #26247 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug