[WPE] Fix libwpe version check WPEWebView destructor https://bugs.webkit.org/show_bug.cgi?id=271387

Reviewed by Adrian Perez de Castro.

WPEWebView destructor avoids calling 'wpe_view_backend_set_fullscreen_client'
for libwpe versions < 1.15.x - the fix appeared in 1.14.2, not 1.15.x - correct that.

Covered by existing tests, when executed with cog.

* Source/WebKit/UIProcess/API/wpe/WPEWebView.cpp:
(WKWPE::View::~View):

Canonical link: https://commits.webkit.org/276729@main